<resources>
    <string name="app_name">Application</string>
    <string name="watch_later" translatable="false">watch later</string>
    <string name="favorites" translatable="false">favorites</string>
    <string name="selections" translatable="false">selections</string>
    <string name="menu" translatable="false">menu</string>
    <string name="settings" translatable="false">settings</string>
    <string name="posters_presented" translatable="false">posters presented:
        https://www.kinopoisk.ru/</string>
    <string name="menu_settings" translatable="false"> menu settings</string>
    <string name="action_settings" translatable="false">action settings</string>
    <string name="search" translatable="false">Search</string>
    <string name="home" translatable="false">Home</string>


    <string name="dialog_title" translatable="false">Alert Dialog Title</string>
    <string name="dialog_text" translatable="false">Would you like to exit?</string>
    <string name="dialog_NegativeButton" translatable="false">No</string>
    <string name="dialog_PositiveButton" translatable="false">Yes</string>
    <string name="dialog_NeutralButton" translatable="false">Ignore</string>
    <string name="dialog_cancelled" translatable="false">Dialog cancelled</string>

    <string name="back_passed" translatable="false">Double tap for exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="radio_group_header" translatable="false">Selection on home screen</string>
    <string name="menu_settings_title_text" translatable="false">menu_settings_title_text</string>
    <string name="radio_button_popular" translatable="false">popular</string>
    <string name="radio_button_top_rated" translatable="false">top rated</string>
    <string name="radio_button_upcoming" translatable="false">upcoming</string>
    <string name="radio_button_playing" translatable="false">playing</string>


</resources>