<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


  <item
      android:id="@+id/watch_later"
      android:icon="@drawable/ic_time_filled"
      android:title="@string/watch_later"
      android:onClick="watchLater"
      app:showAsAction="withText" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        android:onClick="favorites"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selections"
        android:icon="@drawable/ic_video_library"
        android:title="@string/selections"
        android:onClick="selections"
        app:showAsAction="withText" />


</menu>